[tool.poetry]
name = "util"
version = "0.1.0"
description = "Utils for the hoi2 wiki"
authors = ["Ivan Dimitrov <ivan@idimitrov.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "*"
requests = "*"
pypandoc = "*"
markdownify = "*"
html2text = "*"


[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
